# brain-rs

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: lib.rs
src/activation/: elu.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/initialization/: mod.rs
src/layer/: dense_layer.rs  mod.rs
src/loss/: mod.rs
src/model/: mod.rs  model.rs
src/optimizer/: adam.rs  mod.rs
src/structure/: mod.rs  neuron.rs  synapse.rs
src/training/: datarow.rs  dataset.rs  mod.rs
src/utils/: mod.rs
