[package]
name = "brainrust"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.2", features = ["core-simd", "cuda", "fast-math", "scalar-math"] }
jni = "0.21"
rayon = "1.10.0"
serde = "1.0.215"
rand = "0.9.0-beta.1"
criterion = { version = "0.5.1", features = ["async", "async-std", "async_tokio", "rayon", "tokio", "csv", "csv_output"] }
tokio = { version = "1.42.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]
